# m8

./: .gitignore  .hgignore  CHANGELOG.md  CMakeLists.txt  README.md
Doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
VS/: m8.sln
VS/m8/: m8.vcxproj  m8.vcxproj.filters
VS/magic-finder/: magic-finder.vcxproj  magic-finder.vcxproj.filters
VS/tests/: tests.vcxproj  tests.vcxproj.filters
apps/: CMakeLists.txt
apps/m8/: CMakeLists.txt  ShellIntrf.cpp  m8.cpp  m8Intrf.cpp  m8Intrf.hpp  version.hpp  version.hpp.in
apps/m8/commands/: AnalyzeCommand.hpp  BenchCommand.hpp  CliCommand.hpp  Command.hpp  CommandFactory.hpp  PerftCommand.hpp  UCICommand.hpp  UciCommand.hpp
apps/m8/engine/: Engine.cpp  Engine.hpp  EngineState.hpp  ObservingState.cpp  ObservingState.hpp  PerftState.cpp  PerftState.hpp  SearchState.cpp  SearchState.hpp  WaitingState.cpp  WaitingState.hpp
apps/m8/options/: Options.cpp  Options.hpp
apps/m8/uci/: UCI.cpp  UCI.hpp  UCIEngine.cpp  UCIEngine.hpp  UCIInterface.cpp  UCIInterface.hpp  UCIOptionType.hpp
apps/magic-finder/: CMakeLists.txt  magic-finder.cpp
cmake/: CMakeLists.txt  GenerateVersionHeader.cmake  ucm.cmake
cmake/m8/: CMakeLists.txt
cmake/magic-finder/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
doc/: PieceSquareTableGenerator.ods  mnemonics.txt
include/m8chess/: Analyzer.hpp  Benchmark.hpp  BenchmarkResult.hpp  Board.hpp  Checkmate.hpp  Color.hpp  Const.hpp  CoordinateNotation.hpp  Direction.hpp  IPerftObserver.hpp  Init.hpp  Move.hpp  MoveLegality.hpp  MoveList.hpp  Perft.hpp  Piece.hpp  SAN.hpp  Sq.hpp  TimeManager.hpp  Types.hpp  XRay.hpp
include/m8chess/eval/: Eval.hpp  GamePhase.hpp  PieceSqTable.hpp
include/m8chess/movegen/: Attacks.hpp  MoveGeneration.hpp  MoveGenerator.hpp  MvvLva.hpp
include/m8chess/search/: AlphaBeta.hpp  ISearchObserver.hpp  IterativeDeepening.hpp  PV.hpp  Search.hpp  SearchResult.hpp  SearchSubject.hpp  Searcher.hpp
include/m8chess/time/: ChessClock.hpp  ConventionalChessClock.hpp  ConventionalTimeControl.hpp  ConventionalTimeManager.hpp  IncrementalChessClock.hpp  IncrementalTimeControl.hpp  TimeManager.hpp  TimePerMoveChessClock.hpp
include/m8chess/transposition/: Bucket.hpp  EntryType.hpp  TranspositionEntry.hpp  TranspositionTable.hpp  Zobrist.hpp
include/m8common/: Bb.hpp  Output.hpp  Signal.hpp  Timer.hpp  chronoHelpers.hpp  console.hpp  logging.hpp  stringHelpers.hpp
include/m8common/options/: ModifiableOption.hpp  Options.hpp  PhasePieceSquareTable.hpp  PieceSquareTable.hpp  PiecesValues.hpp
lichess-bot/: Dockerfile  README.md  config.yml  m8.json
resources/: m8.json
src/: CMakeLists.txt
src/common/: Bb.cpp  Bb.hpp  Board.cpp  Board.hpp  Color.hpp  Const.hpp  Init.hpp  Move.hpp  MoveGen.cpp  MoveGen.hpp  Piece.hpp  Sq.hpp  Utils.hpp
src/m8/: Engine.cpp  Engine.hpp  ShellIntrf.cpp  ShellIntrf.hpp  m8.cpp  m8Intrf.cpp  m8Intrf.hpp  version.hpp.in
src/m8/engine/: Engine.cpp  Engine.hpp  EngineCallbacks.hpp  EngineState.cpp  EngineState.hpp  IPerftObserver.hpp  InvalidEngineCommandException.hpp  InvalidMoveException.hpp  ObservingState.cpp  ObservingState.hpp  PerftState.cpp  PerftState.hpp  SearchState.cpp  SearchState.hpp  ThinkingState.cpp  ThinkingState.hpp  WaitingState.cpp  WaitingState.hpp
src/m8/options/: EvalOptions.hpp  ModifiableOption.hpp  Option.hpp  Options.cpp  Options.hpp  OptionsDefinitions.hpp  PerftOptions.hpp  PsqtZoneValue.hpp
src/m8chess/: Analyzer.cpp  Attacks.cpp  Attacks.hpp  Benchmark.cpp  Board.cpp  Board.hpp  CMakeLists.txt  Checkmate.hpp  Color.hpp  Column.hpp  Const.hpp  CoordinateNotation.cpp  CoordinateNotation.hpp  Direction.cpp  Direction.hpp  Init.hpp  InvalidMoveNotationException.hpp  Mat.hpp  Move.hpp  MoveGen.cpp  MoveGen.hpp  MoveList.hpp  Perft.cpp  Perft.hpp  Piece.hpp  Row.hpp  SAN.cpp  SAN.hpp  Sq.hpp  TimeManager.cpp  Types.hpp  XRay.hpp  m8chess.hpp
src/m8chess/eval/: Eval.cpp  Eval.hpp  PieceSqTable.cpp  PieceSqTable.hpp
src/m8chess/movegen/: Attacks.cpp  MoveGeneration.hpp  MoveGenerator.hpp  MvvLva.cpp
src/m8chess/search/: AlphaBeta.cpp  AlphaBeta.hpp  ISearchObserver.hpp  IterativeDeepening.cpp  IterativeDeepening.hpp  Minimax.cpp  Minimax.hpp  PV.hpp  Search.cpp  Search.hpp  SearchCallbacks.hpp  SearchObserver.hpp  SearchResult.hpp  SearchStats.hpp  SearchSubject.hpp  SearchThread.cpp  SearchThread.hpp  Searcher.cpp  Searcher.hpp
src/m8chess/time/: ChessClock.cpp  ConventionalChessClock.hpp  ConventionalTimeManager.hpp  IncrementalChessClock.hpp  IncrementalTimeManager.hpp  TimeControl.hpp  TimeManager.cpp  TimeManager.hpp  TimePerMoveTimeControl.hpp  TimePerMoveTimeManager.hpp
src/m8chess/transposition/: TranspositionTable.hpp  Zobrist.cpp
src/m8common/: 0x88.hpp  Bb.cpp  Bb.hpp  CMakeLists.txt  Output.cpp  Signal.cpp  ThreadPool.cpp  ThreadPool.hpp  Timer.cpp  Timer.hpp  Utils.hpp  chronoHelpers.hpp  console.hpp  logging.cpp  logging.hpp  m8common.hpp  stringHelpers.cpp  stringHelpers.hpp
src/m8common/options/: Options.cpp
src/magic-finder/: magic-finder.cpp
src/tests/: Attacks_tests.cpp  Bb_tests.cpp  Board_tests.cpp  Checkmate_tests.cpp  CoordinateNotation_tests.cpp  MoveGen_tests.cpp  MoveLegality_tests.cpp  Move_tests.cpp  Perft_tests.cpp  Piece_tests.cpp  SAN_tests.cpp  Sq_tests.cpp  TranspositionEntry_test.cpp  Utils_tests.cpp  XRay_tests.cpp  catch.hpp  tests_main.cpp
tests/: Attacks_tests.cpp  Bb_tests.cpp  Board_tests.cpp  CMakeLists.txt  Checkmate_tests.cpp  CoordinateNotation_tests.cpp  MoveGen_tests.cpp  MoveLegality_tests.cpp  Move_tests.cpp  Perft_tests.cpp  Piece_tests.cpp  SAN_tests.cpp  Sq_tests.cpp  TranspositionEntry_test.cpp  Utils_tests.cpp  XRay_tests.cpp  tests_main.cpp
tools/: install_m8  install_m8_dev
tools/m8t/: README.md  m8t.py  requirements.txt  tournament.example.yml
